Improved Organization & purchase Error handling

--- a/FitHub.xcodeproj/xcshareddata/xcschemes/FitHub.xcscheme
+++ b/FitHub.xcodeproj/xcshareddata/xcschemes/FitHub.xcscheme
@@ -51,6 +51,12 @@
             ReferencedContainer = "container:FitHub.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = ""
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
