addressing git issues

--- a/FitHub/.editorconfig
+++ b/FitHub/.editorconfig
@@ -8,6 +8,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+trim_final_newlines = true
 charset = utf-8
 
 # Swift files
@@ -35,6 +36,3 @@ indent_size = 2
 [*.sh]
 indent_style = space
 indent_size = 2
-
-
-
