--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,39 @@
 {
+  // Disable format on save to prevent unwanted whitespace changes
+  "editor.formatOnSave": false,
+  "editor.formatOnPaste": false,
+  "editor.formatOnType": false,
+
+  // Trim trailing whitespace on save (but don't add extra newlines)
+  "files.trimTrailingWhitespace": true,
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+
+  // Prevent multiple blank lines
+  "files.maxMemoryForLargeFilesMB": 4096,
+
+  // Disable auto-formatting for specific file types
+  "[json]": {
+    "editor.formatOnSave": false,
+    "editor.defaultFormatter": null
+  },
   "[typescript]": {
     "editor.formatOnSave": false,
     "editor.defaultFormatter": null
   },
-  "[javascript]": {
-    "editor.formatOnSave": false,
-    "editor.defaultFormatter": null
-  },
-  "[json]": {
-    "editor.formatOnSave": false
-  },
   "[markdown]": {
-    "editor.formatOnSave": false
-  },
-  "[shellscript]": {
     "editor.formatOnSave": false,
     "editor.defaultFormatter": null
   },
-  "files.trimTrailingWhitespace": false,
-  "files.insertFinalNewline": false,
-  "files.trimFinalNewlines": false
+  "[jsonc]": {
+    "editor.formatOnSave": false,
+    "editor.defaultFormatter": null
+  },
+
+  // EditorConfig settings
+  "editorconfig.generateAuto": false,
+
+  // Prevent any extensions from auto-formatting
+  "prettier.enable": false,
+  "eslint.format.enable": false
 }
