Added affiliate premium granting from link

--- a/FitHub/Firebase/firebase.json
+++ b/FitHub/Firebase/firebase.json
@@ -6,13 +6,27 @@
     "public": "public",
     "ignore": [
       "firebase.json",
-      "**/.*",
       "**/node_modules/**"
     ],
     "rewrites": [
       {
+        "source": "/affiliate/**",
+        "destination": "/affiliate.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "source": "/.well-known/apple-app-site-association",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/json"
+          }
+        ]
       }
     ]
   },
