fixed html file issues

--- a/FitHub/Firebase/firebase.json
+++ b/FitHub/Firebase/firebase.json
@@ -27,6 +27,15 @@
             "value": "application/json"
           }
         ]
+      },
+      {
+        "source": "*.js",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/javascript"
+          }
+        ]
       }
     ]
   },
