added test instructions

--- a/FitHub/.gitattributes
+++ b/FitHub/.gitattributes
@@ -18,8 +18,6 @@
 *.ico binary
 *.pdf binary
 
-# Entitlements files should be treated as text
-# Note: If you get "entitlements were modified during the build" errors,
-# remove extended attributes with: xattr -c FitHub.entitlements
-*.entitlements text
+# Entitlements files should not be normalized by git (prevents "modified during build" errors)
+*.entitlements -text
 
